# architects-ex-2

./: .gitignore  baseline_runner.py  build_report.py  eval_harness.py  exercise2_customer_support_agent.md  hallucinate_diff.py  main.py  pyproject.toml  question_embeddings.npz  rag_runner.py  reference_questions.json  tf_client.py
parsed_corpus/apartment/files/: adira-silver-2025-apartment-plus-contents-אדירה-כסף-פברואר-25-באנגלית.pdf.json  דף-מידע-פוליסה-אדירה-זהב-יולי-2015.pdf.json  הודעה-על-אירוע-או-תביעת-נזק-רכוש-ביטוח-דירה.pdf.json  הודעה-על-תקופת-התיישנות.pdf.json  הנחיות-בדבר-אופן-הפעולה-הנדרש-מתובע-רכוש-דירות.pdf.json  חוברת-הכללים-לגבי-פוליסות-שנרכשו-לאחר-ה-030917.pdf.json  חוברת-כללים.pdf.json  טבלת-המועדים-והתקופות-הקבועות-בחוזר-יישוב-תביעות-וטיפול-בפ.pdf.json  טופס-בקשה-לביטול-פוליסה-ביטוח-דירה.pdf.json  טופס-בקשה-לביצוע-שינויים-בביטוח-דירה.pdf.json  טופס-דווח-פרטי-חשבון-הבנק-לצורך-העברה-בנקאית.pdf.json  טופס-הצעה-אדירה-כסף-מהדורת-פברואר-2025.pdf.json  טופס-הצעה-לפוליסת-ביטוח-דירה-אדירה-ארד.pdf.json  טופס-הצעה-לפוליסת-ביטוח-דירה-אדירה-זהב.pdf.json  טופס-הצעה-לפוליסת-ביטוח-הדירה-ותכולתה-ש-מהדורת-אוגוסט-2020.pdf.json  טופס-הצעה-לפוליסת-ביטוח-לבית-המשותף-עד-הגג.pdf.json  טופס-הצעה-לפוליסת-ביטוח-רכוש-fine-art-collectors-לאספני-אמנות.pdf.json  טופס-הצעה-לפוליסת-ביטוח-רכוש-כל-הסיכונים-לדברי-ערך.pdf.json  מידע-מהותי-לפוליסת-אדירה-כסף-מהדורת-פברואר-2025.pdf.json  מידע-מהותי-לפוליסת-ביטוח-אדירה-ארד.pdf.json  מערכת-כללים-לבירור-וליישוב-תביעות-ולטיפול-בפניות-הציבור.pdf.json  נספח-לחידוש-פוליסת-ביטוח-דירה-אדירה-זהב-עבור-נזקי-מים.pdf.json  (+16 more)
(+533 files in other folders)
