[project]
name = "architects-ex-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docling>=2.113.0",
    "dotenv>=0.9.9",
    "fastapi>=0.139.0",
    "huggingface-hub>=1.23.0",
    "litellm>=1.92.0",
    "pandas>=3.0.3",
    "pydantic>=2",
    "requests>=2.34.2",
    "uvicorn>=0.51.0",
]
